# legume_price

./: .gitignore  Cargo.toml  Readme.md
configs/: config.yaml
src/: coincap.rs  fiat.rs  main.rs
