[package]
name = "legume_price"
version = "0.1.0"
authors = ["Thomas <denhollander.thomas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["gzip", "brotli", "json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio = {version = "1", features = ["full"] }
serde_yaml = "0.8"
structopt = "0.3"
anyhow = "1"
rust_decimal = "1"
thiserror = "1"
beancount-core = { git = "https://github.com/twilco/beancount", rev = "50363f2ebc0c3c4fd6fee0fac43a9123e7bca4e5", features = ["chrono"] }
beancount-render = { git = "https://github.com/twilco/beancount", rev = "50363f2ebc0c3c4fd6fee0fac43a9123e7bca4e5"}

[profile.release]
lto = "fat"
codegen-units = 1
